+Fix loading custom key profiles that have duplicate entries.
+Fix handling the toggling of Maximize/Restore editor for some workflows so that
the view is correctly toggled back and forth for all cases.
+Fix display issues when scrolling on GTK caused by overlay scrollbars.
+Fix issue with some obsolete plugins being shown in plugin manager download window.

#-----------------------------------------------------------------------------#

VERSION 0.6.58
DATE 07/23/2011
44th Alpha Release

NEWS:

NEW: [features/improvements]
+Updated all translations from launchpad site
+Add right click menu to Shelf tab area to open Shelf items.
+UI Display font setting is now more uniformly applied across the interface.
+Use more understated style for brace matching in default style.

LIBRARY:
+Fix PlateButton size being incorrectly calculated on GTK.

BUG FIXES:
+Fix crash in handling corrupt style sheet data
+Fix frame title not updating correctly when only one tab is open on Linux.
+Partial fix for screen flashing issue on Linux when using dark syntax
highlighting themes. Need to turn off code folding to stop the flashing.
+Fix tab context menu option for Close and Close All not working on Linux.
+Fix minor defect in OSX document icon (patch from auria)
+Fix GTK warning messages during startup on Linux.
+Fix missing definition of error_style for Guepardo syntax theme.
+Fix Unicode handling issue in xml handling for ipc server.
+Fix To Upper/Lower command not working with some characters.
+Properly handle searches with precomposed and decomposed Unicode data.
+Fix tab icon setting not being applied after restart.
+Fix toolbar when running under wxPython2.9 on OSX.

#-----------------------------------------------------------------------------#

VERSION 0.6.48
DATE 05/14/2011
43rd Alpha Release

NEWS:

This release contains some noteable improvements to the Python autocompletion
support. It is more accurate and capabable of producing results under more